--- a/docs/design-doc/概念设计.md
+++ b/docs/design-doc/概念设计.md
@@ -41,7 +41,7 @@
 ![05.png](img/0005.png)
 ## 关键技术选型建议
 ### 1.AI模型分层架构
-![06.png](img/0006.png)
+具体情况具体分析
 ### 2.记忆处理流水线
 ![07.png](img/0007.png)
 ## 实施路线建议
