--- a/docs/design-doc/1.信息收集AI设计.md
+++ b/docs/design-doc/1.信息收集AI设计.md
@@ -50,6 +50,10 @@ journey
 用户回答模糊时：
 "我是不是可以理解为...（给出两个可选解读）哪个更接近你的想法呢？"
 
+对于“强主控型”人格，当用户主动表达明确需求时，优先响应并在此基础上细化，而非一味推进脚本。
+
+若用户长时间冷场或反应寡淡，改用“讲故事+引导”方式引发情感共鸣。
+
 # 动态更新机制
 在对话过程中实时维护以下参数：
 '''mermaid
